# nepomukshell

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Messages.sh  README  asyncloadingresourcemodel.cpp  asyncloadingresourcemodel.h  classmodel.cpp  classmodel.h  completion.cpp  completion.h  completionitem.cpp  completionitem.h  completionmodel.cpp  completionmodel.h  infosplash.cpp  infosplash.h  knx.cpp  knx.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nepomukshell-config.h.cmake  nepomukshell.desktop  nepomukshellui.rc  newclassdialog.cpp  newclassdialog.h  newclassdialog.ui  nrlmodel.cpp  nrlmodel.h  patch1.diff  pimo.cpp  pimo.desktop.cmake  pimo.h  pimo.rdfs  pimoitemmodel.cpp  pimoitemmodel.h  pimomodel.cpp  (+36 more)
doc/: CMakeLists.txt  index.docbook
settings/: nepomukshellsettings.kcfg  nepomukshellsettings.kcfgc  resourcebrowsersettingspage.h  resourcebrowsersettingspage.ui
test/: CMakeLists.txt  resourceinputwidgettest.cpp
utils/: README  resourcemodel.h  simpleresourcemodel.h
